Sat Jun 11 18:02:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_getc): should be 7bit if ascii.  fixes #4557

Sat Jun 11 16:28:25 2011  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/formatters/pretty.rb
	  (REXML::Formatters::Pretty#write_text),
	  test/rexml/test_core.rb
	  (Tester#test_pretty_format_long_text_finite): don't ignore
	  'width' parameter in pretty formatter. fixes #4498
	  Reported by Michael Frasca. Thanks!!!

Sat Jun 11 16:04:03 2011  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/xpathparser.rb
	  (REXML::Parsers::XPathParser#parse),
	  test/rexml/test_elements.rb
	  (ElementsTester#test_each_with_frozen_condition):
	  don't modify original XPath. fixes #4164
	  Reported by Pavel Shved. Thanks!!!

Sat Jun 11 16:04:03 2011  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/xpathparser.rb
	  (REXML::Parsers::XPathParser#parse),
	  test/rexml/test_elements.rb
	  (ElementsTester::test_each_with_frozen_condition):
	  don't modify original XPath. fixes #4164
	  Reported by Pavel Shved. Thanks!!!

Mon Jun  6 09:39:43 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/parser.c (parse): release event objects to plug memory
	leak.  Thanks Mark J. Titorenko!

Tue Dec 21 00:46:20 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (thread_cleanup_func): Don't touch native threading
	  resource at fork. Sadly this is purely bandaid. We need to
	  implement proper fix later. [Bug #4169] [ruby-core:33767]

Tue May 24 07:06:34 2011  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/extconf.rb: search directories for 64bit library (e.g.
	  /usr/lib64) and bug fix.

Mon Jun  6 07:08:54 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/drb/ut_array.rb: uses 'druby://localhost:0' instead of nil
	  as well as test/drb/ut_drb.rb.  This fixes the same problem as
	  [ruby-dev:23078].

	* test/drb/ut_array_drbssl.rb: ditto.

Fri May 27 08:35:04 2011  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
